Minor Gitignore update. - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ PrototypingProject/Library/metadata/
 PrototypingProject/Temp/
 PrototypingProject/Library/ShaderCache/
 PrototypingProject/Library/StateCache/
+PrototypingProject/obj/Debug/
