update to gitignore. Again. - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ PrototypingProject/Temp/
 PrototypingProject/Library/ShaderCache/
 PrototypingProject/Library/StateCache/
 PrototypingProject/obj/Debug/
+PrototypingProject/PrototypingProject.sln
+PrototypingProject/Library/
