Another another updated gitignore - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ PrototypingProject/Library/StateCache/
 PrototypingProject/obj/Debug/
 PrototypingProject/PrototypingProject.sln
 PrototypingProject/Library/
+PrototypingProject/.vs/
