I lied another one. - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ PrototypingProject/obj/Debug/
 PrototypingProject/PrototypingProject.sln
 PrototypingProject/Library/
 PrototypingProject/.vs/
+PrototypingProject/ProjectSettings/
