The One with the loading code, and the input manager. - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ PrototypingProject/Library/
 PrototypingProject/.vs/
 PrototypingProject/ProjectSettings/
 PrototypingProject/Assembly-CSharp.csproj
+PrototypingProject/Assembly-CSharp-Editor.csproj
