Hokay take 3. - Liam

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ PrototypingProject/.vs/
 PrototypingProject/ProjectSettings/
 PrototypingProject/Assembly-CSharp.csproj
 PrototypingProject/Assembly-CSharp-Editor.csproj
+PrototypingProject/Assembly-CSharp.csproj~origin_InputSettings
